<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainscreen.view.MainActivity">

    <TextView
            android:text="@string/title"
            android:id="@+id/stvTitle"
            android:textSize="@dimen/size_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:text="@string/label_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/stvTitle"
            android:id="@+id/textView"/>

    <Spinner
            android:id="@+id/spnOrigin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="44dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/stvTitle" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/spnDestination"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/label_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/textView2"/>

    <Spinner
            android:id="@+id/spnDestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.53"/>


    <TextView
            android:text="@string/label_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:id="@+id/textView3"/>

    <EditText
            android:id="@+id/edtAmount"
            android:hint="@string/label_hint_mount"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spnDestination" app:layout_constraintVertical_bias="0.843"/>



    <Button android:layout_margin="20dp"
            android:id="@+id/btnCalculate"
            android:textColor="@color/white"
            android:background="@drawable/btn_general"
            android:text="@string/label_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
            android:text="@string/label_hint_mount_result"
            android:textSize="25sp"
            android:id="@+id/tvtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>